[package]
name = "vpi-shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["vpi", "verilog", "systemverilog", "ffi", "simulation"]
categories = ["external-ffi-bindings", "simulation"]
description = "Runtime symbol shim for VPI plugins on platforms that require explicit symbol resolution."

[dependencies]
vpi-sys.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
