[package]
name = "vpi-shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["vpi", "verilog", "systemverilog", "ffi", "simulation"]
categories = ["external-ffi-bindings", "simulation"]
description = "Runtime symbol shim for VPI plugins on platforms that require explicit symbol resolution."
readme = "README.md"

[features]
default = []
sv = ["vpi-sys/sv"]

[dependencies]
vpi-sys.workspace = true
