[package]
name = "vpi-sys"
version.workspace = true
edition.workspace = true
build = "build.rs"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Low-level FFI bindings to the Verilog and SystemVerilog VPI C API, generated with bindgen. This crate is not intended for direct use; use the safe `vpi` crate instead."

[build-dependencies]
bindgen.workspace = true

[features]
default = []
sv = []
