[package]
name = "vpi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "vpi"
path = "src/lib.rs"

[dependencies]
bitflags.workspace = true
num-derive.workspace = true
num-traits.workspace = true
vpi-sys.workspace = true

[features]
default = []
sv = ["vpi-sys/sv"]
