[package]
name = "vpi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["vpi", "verilog", "systemverilog", "bindings", "hardware-simulation"]
categories = ["simulation", "api-bindings"]
description = "Safe and ergonomic Rust bindings to the Verilog and SystemVerilog VPI C API for writing VPI applications in Rust."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "vpi"
path = "src/lib.rs"

[features]
default = []
dynamic = ["dep:vpi-shim"]
bigint = ["dep:num-bigint"]
sv = ["vpi-sys/sv"]

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
vpi-shim = { workspace = true, optional = true }

[dependencies]
bitflags.workspace = true
num-bigint = { workspace = true, optional = true }
num-derive.workspace = true
num-traits.workspace = true
vpi-sys.workspace = true
